<resources>
    <string name="app_name">AyamHub</string>
    <string name="umkm">UMKM</string>
    <string name="atau">Atau</string>
    <string name="peternak">Peternak</string>
    <string name="siapa_anda">Siapa Anda?</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="halo_workers">Halo Workers</string>
    <string name="bangkit_2023">Bangkit 2023</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="welcome">Selamat Datang di AyamHub</string>
    <string name="email">Email</string>
    <string name="daftar">Daftar</string>
    <string name="daftarkan_diri_kamu_yuk">Daftarkan diri kamu yuk!</string>
    <string name="sudah_punya">Sudah punya akun?</string>
    <string name="nope">Nomor Telepon</string>
    <string name="mulai">Mulai</string>
    <string name="hello_kamu">Ayuk kita mulai!</string>
    <string name="kg">/Kg</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Beranda</string>
    <string name="title_detection">Deteksi</string>
    <string name="title_bookmark">Bookmarks</string>
    <string name="form_email_error">Form nama tolong diisi ya</string>
    <string name="form_password_error">Password harus lebih dari 8 karakter ya</string>
    <string name="title_profile">Profil</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="deteksi_sekarang">Deteksi Sekarang</string>
    <string name="telepon">Telepon:</string>
    <string name="_08956565644">08956565644</string>
    <string name="password">Kata Sandi:</string>
    <string name="passw">********</string>
    <string name="buat_peternakan">Buat Peternakan</string>
    <string name="cari_peternakan">Cari Peternakan</string>
    <string name="ayam">Ayam</string>
    <string name="hub">Hub</string>
    <string name="umur_ayam">Umur Ayam</string>
    <string name="harga_rp_23_000_kg">Harga: Rp. 23.000/Kg</string>
    <string name="whatsapp">Call</string>
    <string name="maps">Maps</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="provinsi">Provinsi</string>
    <string name="deteksi_gambar">Deteksi Gambar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_data_peternakan">Edit Peternakan</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="jenis_ayam">Jenis Ayam</string>
    <string name="tittle1">Cari Supplier Lebih Mudah</string>
    <string name="tittle2">Deteksi Penyakit Ayam Anda</string>
    <string name="greeting1">Halo!!, aplikasi ini merupakan aplikasi yang dapat mempermudah para UMKM yang menjual ayam potong, dan merupakan lapak para peternak ayam untuk mempromosikan peternakannya</string>
    <string name="greeting2">Selain itu, aplikasi ini juga dapat mendeteksi kesehatan ayam kamu lho!</string>
    <string name="keluar">Keluar</string>
    <string name="khair_fadhillah">Khair Fadhillah</string>
    <string name="email_dummy">khair@gmail.com</string>
    <string name="filter">Terapkan Filter</string>
    <string name="alamat">Alamat:</string>
    <string name="tangerang_selatan">Tangerang Selatan</string>
    <string name="catatan_dari_peternak">Catatan dari Peternak</string>
    <string name="halo_disini_catatan_bla_bla_bl">halo disini catatan bla bla bl</string>
    <string name="stock_2000kg">Stock: 2000Kg</string>
    <string name="tipe_broiler">Tipe: Broiler</string>
    <string name="_28_hari">28 Hari</string>
    <string name="_100_kg">100 KG</string>
    <string name="berat_ayam">Berat Ayam</string>
    <string name="peternakan_rindang_jaya">Peternakan Rindang Jaya</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="belum_siap_panen">Belum Siap Panen</string>
    <string name="siap_panen">Siap Panen</string>
    <string name="status_panen">Status Panen:</string>
    <string name="gang_atau_nama_jalan">Gang atau nama jalan</string>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="kec">Kecamatan:</string>
    <string name="pilih_kabupaten">Pilih Kabupaten</string>
    <string name="kab">Kabupaten:</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="prov">Provinsi:</string>
    <string name="stock_dalam_kg">Stock Ayam</string>
    <string name="berat_dalam_kg_misal_1_1_3">Berat dalam Kg (Misal 1 - 1.3)</string>
    <string name="umur_dalam_hari">Umur dalam hari</string>
    <string name="harga">Harga</string>
    <string name="username">Nama Peternakan</string>
    <string name="chickenWeightTv">%s Kg</string>
    <string name="chickenAgeTv">%s Hari</string>
    <string name="chickenTypeTv">Tipe: %s</string>
    <string name="chickenStokTv">Stok: %s Ekor</string>
    <string name="chickengPriceTv">Harga: Rp. %s/Kg</string>
    <string name="your_farm">Lihat Peternakanmu</string>
    <string name="catatan">Catatan</string>
    <string name="reg">Daftar Peternakan</string>
    <string name="whatsapp_msg">Halo %s, saya ingin nanya nanya nih</string>
    <string name="hasil">Hasil</string>
    <string name="cara_penanganan">Cara Penanganan</string>
    <string name="remove_filter">Hapus Filter</string>
    <string name="lokasi">Lokasi</string>
    <string name="filter_title">Filter Berdasarkan</string>
    <string name="terapkan_sorting">Terapkan</string>
    <string name="terlama">Terlama</string>
    <string name="terbaru">Terbaru</string>
    <string name="harga_termahal">Harga Termahal</string>
    <string name="harga_termurah">Harga Termurah</string>
    <string name="nama">Nama</string>
    <string name="sorting_berdasarkan">Urutkan Berdasarkan</string>
    <string name="status">Status</string>
    <string name="tidak_ada">Tidak ada data</string>
    <string-array name="status_options">
        <item>Siap Panen</item>
        <item>Belum Panen</item>
    </string-array>
</resources>