<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.makefarm.EditFarmer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jenis_ayam"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/chickenType"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hargaEditText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/umur_dalam_hari"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/umurEditText"
                android:layout_width="match_parent"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/berat_dalam_kg_misal_1_1_3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/beratEditText"
                android:inputType="text"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_dalam_kg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stockEditText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Catatan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/catatan"
                android:inputType="number"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prov"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spProvince"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pilih_provinsi" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kab"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spKabupaten"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pilih_kabupaten" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kec"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spKecamatan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pilih_kecamatan" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gang_atau_nama_jalan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alamatLengkap"
                android:inputType="number"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textColorHint="#a9a9a9"
                android:backgroundTint="#ffffff"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_panen" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/orange2"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:layout_height="wrap_content"
                android:textOn="@string/siap_panen"
                android:textOff="@string/belum_siap_panen" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <Button
            android:id="@+id/gambarButton"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/pilih_gambar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <ImageView
            android:id="@+id/gambarPeternakan"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange2"
            android:textAllCaps="false"
            android:text="@string/simpan_data"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:padding="12dp"
            style="@style/Widget.MaterialComponents.Button" />
    </LinearLayout>
</ScrollView>